--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											<br>
 											<ul>
 												<li>
-													<img class="svg" src="img/svg/gift.svg" alt="" />
+													<!-- <img class="svg" src="img/svg/gift.svg" alt="" /> -->
 													<span><label>Birthday:</label> 11.07.1996</span>
 												</li>
 												<!-- <li>
@@ -182,7 +182,7 @@
 													<span><label>Age:</label> 23</span>
 												</!--> 
 												<li>
-													<img class="svg" src="img/svg/placeholder.svg" alt="" />
+													<!-- <img class="svg" src="img/svg/placeholder.svg" alt="" /> -->
 													<span><label>Location:</label> <a class="href_location" href="#">Kumamoto ASO</a></span>
 												</li>
 												<!-- <li>
